--- a/2(1:3)/ex11.html
+++ b/2(1:3)/ex11.html
@@ -3,13 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>테이블(표) 태그 - table 태그</title>
-    <!-- table 태그 -->
-    <!-- thead : table header 표 제목 -->
-    <!-- tbody : table body 표 내용 -->
-    <!-- tr : table row 한 행(줄) -->
-    <!-- th : table header 제목셀 -->
-    <!-- td : table date 데이터셀 -->
+    <title>테이블 셀 병합</title>
+    <!-- Relative Attribute : colspan - 가로방향 셀 병합, rowspan - 세로방향 셀 병합 -->
   </head>
   <body>
     <table border="1px">
@@ -23,11 +18,10 @@
       <tbody>
         <tr>
           <td>내용1</td>
+          <td rowspan="2">내용1</td>
           <td>내용1</td>
-          <td>내용1</td>
-        </tr>
+        </td>
         <tr>
-          <td>내용2</td>
           <td>내용2</td>
           <td>내용2</td>
         </tr>
