🚀Mission: ex13 - 테이블 만들기

--- a/2(1:3)/ex13.html
+++ b/2(1:3)/ex13.html
@@ -18,18 +18,18 @@
         </tr>
         <tr>
           <td>월급</td>
-          <td>1,000,000</td>
+          <td align="right">1,000,000</td>
           <td></td>
         </tr>
         <tr>
           <td>점심값</td>
           <td></td>
-          <td>5,000</td>
+          <td align="right">5,000</td>
         </tr>
         <tr>
           <td>부모님선물</td>
           <td></td>
-          <td>30,000</td>
+          <td align="right">30,000</td>
         </tr>
         <tr>
           <td bgcolor="skyblue" rowspan="3">총계</td>
