🚀Mission: ex15 - 시 만들기

--- a/2(1:3)/ex14.html
+++ b/2(1:3)/ex14.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>이미지 출력 : img 태그</title>
   </head>
   <body>
-    
+    <!-- src : 이미지 파일 이름 -->
+    <!-- alt : 이미지가 없을 때 출력되는 대체문구 -->
+    <img src="https://cdn.pixabay.com/photo/2024/12/20/11/53/architect-9280053_1280.jpg" alt="image1" width="800px" height="600px" />
+    <img src="https://cdn.pixabay.com/photo/2024/12/20/11/53/architect-9280053_1280.jpg" alt="image2" width="600px" height="800px" />
+    <a href="#" download="https://cdn.pixabay.com/photo/2024/12/20/11/53/architect-9280053_1280.jpg" alt="image2">image 다운</a>
+
+    <br />
+    <!-- 더미 이미지 -->
+    <img src="http://via.placeholder.com/600x300" alt="dummy"/>
   </body>
 </html>
