--- a/HTML/mission/ex15.html
+++ b/HTML/mission/ex15.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>연습문제 - 시 웹페이지 만들기</title>
+    <title>실습2 - 시 웹페이지 만들기</title>
     <style>
       p{
         color: indianred;
