--- a/HTML-CSS/CSS/mission/ex36.html
+++ b/HTML-CSS/CSS/mission/ex36.html
@@ -5,26 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>연습문제10</title>
     <style>
-      .image {
-        background: url(../exercise/bg.jpg) no-repeat;
-        background-size: cover;
+      .img {
         width: 400px;
         height: 300px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        position: relative;
         border: 1px solid red;
       }
       .text {
-        color: aqua;
-        font-size: 30px;
+        position: absolute;
+        top: 135px;
+        left: 110px;
+        font-size: 25px;
         font-weight: 500;
+        color: aqua;
       }
     </style>
   </head>
   <body>
     <h1>img태그 위에 글자배치</h1>
-    <div class="image">
+    <div class="img">
+      <img src="../exercise/bg.jpg" alt="image" width="400px" height="300px"/>
       <div class="text">향기로운 커피향기</div>
     </div>
   </body>
