🚀 Mission: CSS 연습문제15

--- a/HTML-CSS/CSS/exercise/mid-level/ex50.html
+++ b/HTML-CSS/CSS/exercise/mid-level/ex50.html
@@ -25,7 +25,7 @@
         background-color: rgb(136, 219, 136);
       }
       .item:nth-child(1) {
-        flex-basis: 300px;
+        /* flex-basis: 300px; */
         flex-shrink: 0; /*1 기본값*/
         /* 0 고정크기 확보 */
         /* width: 300px; */
