--- a/HTML-CSS/CSS/mission/ex57.html
+++ b/HTML-CSS/CSS/mission/ex57.html
@@ -58,6 +58,7 @@
         display: flex;
         margin: 10px 0;
         gap: 30px;
+        height: 40vh;
       }
       #aside {
         order: 1;
@@ -71,12 +72,14 @@
       }
       #section {
         order: 2;
-        margin-top: 10px;
+        margin: 10px 0;
+        overflow: auto;
       }
       #footer {
         background-color: #ccc;
         text-align: center;
         padding: 20px 0;
+        margin-top: 5vh;
       }
       #footer a {
         margin: 5px;
