🚀 Mission: CSS 연습문제17

--- a/HTML-CSS/CSS/exercise/mid-level/ex72.html
+++ b/HTML-CSS/CSS/exercise/mid-level/ex72.html
@@ -52,7 +52,7 @@
         flex: 1 100%;
       }
       /* Tablet해상도 */
-      @media screen and (min-width: 768px) and (max-width: 959px) {
+      @media screen and (max-width: 959px) {
         .header {
           flex: 1 100%;
           order: 0;
@@ -89,6 +89,7 @@
           order: 1;
         }
         .main {
+          flex: 1 100%;
           height: 400px;
           order: 2;
         }
