--- a/HTML-CSS/CSS/mission/ex73.html
+++ b/HTML-CSS/CSS/mission/ex73.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>연습문제 17 - 반응형 웹 제작</title>
     <!-- ex73 -->
     <style>
       * {
