🚀 Mission: Tailwind 연습문제1 수정

--- a/Tailwind-CSS/mission/ex09.html
+++ b/Tailwind-CSS/mission/ex09.html
@@ -9,42 +9,42 @@
   <body>
     <div class="w-100 flex flex-wrap text-3xl font-bold">
       <div
-        class="flex justify-center items-center bg-green-300 lg:w-full md:w-4/5 sm:w-full h-[100px]"
+        class="flex justify-center items-center bg-green-300 lg:w-full md:w-4/5 w-full h-[100px]"
       >
         헤더
       </div>
       <div
-        class="flex flex-grow lg:w-1/2 md:w-full sm:w-1/2 flex-shrink-0 justify-center items-center h-[150px] bg-red-300 order-1 md:order-2"
+        class="flex flex-grow lg:w-1/2 md:w-full w-1/2 flex-shrink-0 justify-center items-center h-[150px] bg-red-300 order-1 md:order-2"
       >
         섹션1
       </div>
       <div
-        class="flex flex-grow lg:w-1/2 md:w-full sm:w-1/2 flex-shrink-0 justify-center items-center h-[150px] bg-pink-300 order-1 md:order-2"
+        class="flex flex-grow lg:w-1/2 md:w-full w-1/2 flex-shrink-0 justify-center items-center h-[150px] bg-pink-300 order-1 md:order-2"
       >
         섹션2
       </div>
       <div
-        class="flex flex-grow lg:w-1/2 md:w-full sm:w-1/2 flex-shrink-0 justify-center items-center h-[150px] bg-blue-300 order-1 md:order-2"
+        class="flex flex-grow lg:w-1/2 md:w-full w-1/2 flex-shrink-0 justify-center items-center h-[150px] bg-blue-300 order-1 md:order-2"
       >
         섹션3
       </div>
       <div
-        class="flex flex-grow lg:w-1/2 md:w-full sm:w-1/2 flex-shrink-0 justify-center items-center h-[150px] bg-blue-100 order-1 md:order-2"
+        class="flex flex-grow lg:w-1/2 md:w-full w-1/2 flex-shrink-0 justify-center items-center h-[150px] bg-blue-100 order-1 md:order-2"
       >
         섹션4
       </div>
       <div
-        class="flex lg:w-1/2 md:w-1/5 sm:w-1/5 justify-center items-center h-[100px] bg-purple-300 order-2 lg:order-3 md:order-1"
+        class="flex lg:w-1/2 md:w-1/5 w-1/5 justify-center items-center h-[100px] bg-purple-300 order-2 lg:order-3 md:order-1"
       >
         광고
       </div>
       <div
-        class="flex lg:w-1/2 md:w-2/6 sm:w-4/5 justify-center items-center h-[100px] bg-green-700 order-3"
+        class="flex lg:w-1/2 md:w-2/6 w-4/5 justify-center items-center h-[100px] bg-green-700 order-3"
       >
         정보
       </div>
       <div
-        class="flex justify-center items-center bg-green-100 lg:w-full md:w-4/6 sm:w-full h-[100px] md:order-4 sm:order-4"
+        class="flex justify-center items-center bg-green-100 lg:w-full md:w-4/6 w-full h-[100px] md:order-4 order-4"
       >
         푸터
       </div>
