--- a/Tailwind-CSS/mission/ex10.html
+++ b/Tailwind-CSS/mission/ex10.html
@@ -49,10 +49,10 @@
           <p>참조: 나무위키 - 골든리트리버</p>
         </div>
         <div
-          class="flex flex-col order-1 w-1/5 border border-green-800 p-5 h-[300px]"
+          class="flex flex-col order-1 w-1/5 border border-green-800 p-5 mb-10"
         >
           <h4 class="font-bold">Golden Retriever</h4>
-          <img src="dog.jpg" alt="리트리버" class="mb-2" />
+          <img src="dog.jpg" alt="리트리버" class="mb-2 h-[180px]" />
           <ul>
             <li>● 기본특성</li>
             <li>● 단점</li>
