--- a/Javascript/mission/ex20.html
+++ b/Javascript/mission/ex20.html
@@ -6,7 +6,7 @@
     <title>연습문제 6</title>
     <script>
       // 1번
-      for (let i = 0; i < 10; i++) {
+      for (let i = 1; i <= 10; i++) {
         document.write(i + " ");
       }
       document.write("<br/>");
