--- a/Javascript/mission/ex25.html
+++ b/Javascript/mission/ex25.html
@@ -21,7 +21,7 @@
       console.log(arr1);
 
       console.log("2번");
-      let arr2 = Array.from([0, 0, 0, 0, 0], (v) => (v = 1));
+      let arr2 = Array.from({ length: 5 }, () => 1);
       console.log(arr2);
 
       console.log("3번");
