--- a/Javascript/exercise/ex28.html
+++ b/Javascript/exercise/ex28.html
@@ -18,7 +18,7 @@
       };
 
       console.log(person.obj);
-      person.action;
+      person.action();
     </script>
   </head>
   <body></body>
