--- a/Javascript/mission/ex37.html
+++ b/Javascript/mission/ex37.html
@@ -59,6 +59,30 @@
         return { id: v.id, total };
       });
       console.log(res);
+
+      //reduce 문을 사용한 연습문제
+      //5번
+      const nums = [10, 20, 30, 40, 50];
+      //reduce 함수를 이용하여, 35보다 큰 숫자의 갯수를 출력하시오.
+      // 출력예) 2
+      //6번
+      //2.reduce 함수를 이용하여, 배열의 문자열 길이를 구하시오.
+      const strings = ["hong", "lee", "imdan"];
+      //출력예) [4,3,5]
+
+      console.log("5번");
+      const bigNums = nums.reduce(
+        (cnt, cur) => (cur > 35 ? (cnt += 1) : cnt),
+        0
+      );
+      console.log(bigNums);
+
+      console.log("6번");
+      const lenStr = strings.reduce((acc, cur) => {
+        acc.push(cur.length);
+        return acc;
+      }, []);
+      console.log(lenStr);
     </script>
   </head>
   <body></body>
