🚀 Mission: Javascript 연습문제 14

--- a/Javascript/mission/ex45.html
+++ b/Javascript/mission/ex45.html
@@ -15,10 +15,10 @@
         const cntB = document.getElementById("counter-b");
 
         btnA.addEventListener("click", () => {
-          cntA.innerText = Number(cntA.innerText) + 1;
+          cntA.innerText++;
         });
         btnB.addEventListener("click", () => {
-          cntB.innerText = Number(cntB.innerText) + 1;
+          cntB.innerText++;
         });
       };
     </script>
