--- a/Javascript/mission/ex46.html
+++ b/Javascript/mission/ex46.html
@@ -22,6 +22,11 @@
               break;
           }
         };
+        const reset = (arr) => {
+          arr.forEach((v) => {
+            v.value = "";
+          });
+        };
 
         let n1 = document.getElementById("num1");
         let n2 = document.getElementById("num2");
@@ -48,11 +53,7 @@
         });
 
         const delBtn = document.getElementById("del");
-        delBtn.addEventListener("click", () => {
-          n1.value = "";
-          n2.value = "";
-          res.value = "";
-        });
+        delBtn.addEventListener("click", () => reset([n1, n2, res]));
       };
     </script>
     <style>
