--- a/Javascript/mission/ex51.html
+++ b/Javascript/mission/ex51.html
@@ -17,13 +17,9 @@
         for (var i = 1; i <= 10; i++) {
           document.writeln("<tr>");
           document.writeln("<td>목록" + i + "</td>");
-          document.writeln('<td><input id="input' + i + '" type="text"></td>');
+          document.writeln(`<td><input id="input${i}" type="text"></td>`);
           document.writeln(
-            '<td><button onClick="del(this.value)" id="btn' +
-              i +
-              '" value="' +
-              i +
-              '">값지우기</button></td>'
+            `<td><button onClick="del(this.value)" id="btn${i}" value="${i}">값지우기</button></td>`
           );
           document.writeln("</tr>");
         }
@@ -31,7 +27,7 @@
       }
       function del(idx) {
         let text = document.getElementById("input" + idx);
-        text.value("");
+        text.value = "";
       }
     </script>
   </head>
