✅ clear: mid-term

--- a/mid-term/index.html
+++ b/mid-term/index.html
@@ -52,6 +52,10 @@
 
         color: grey;
         font-size: 1.3rem;
+
+        &:hover {
+          color: #2662e9;
+        }
       }
       .menu-modal {
         display: none;
